# ml-polars-prevision

./: README.md  pyproject.toml  submission.csv
ml_polars_prevision/: ml_classificacao.ipynb  ml_previsao.ipynb
